<resources>
    <string name="app_name">ImPttV2</string>
    <string name="title_home">首页</string>
    <string name="title_contact">联系人</string>
    <string name="title_settings">设置</string>
    <string name="subtitle_phone_number">手机号</string>
    <string name="hint_user_info">个人信息</string>
    <string name="subtitle_call_number">呼号</string>
    <string name="subtitle_name">姓名</string>
    <string name="subtitle_autoplay">自动播放</string>
    <string name="icon_desc">right</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">设置</string>
    <string name="hint_group_info">频道信息</string>
    <string name="subtitle_group_name">频道名称</string>
    <string name="subtitle_mute_group">不接收群消息</string>
    <string name="subtitle_pin_group">置顶本群</string>
    <string name="title_dismiss_group">解散频道</string>
    <string name="title_leave_group">退出频道</string>
    <string name="title_group_members">频道成员</string>
    <string name="subtitle_user_call_number">用户呼号</string>
    <string name="subtitle_mute_user">禁言</string>
    <string name="subtitle_user_usage_freq">使用频率</string>
    <string name="add">添加</string>
    <string name="home">首页</string>
    <string name="save">保存</string>
    <string name="subtitle_group_icon">群组图标</string>
    <string name="title_create_group">创建群组</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="cancel">取消</string>
    <string name="title_take_photo">拍照</string>
    <string name="title_from_gallery">从手机相册选择</string>
    <string-array name="option_photo">
        <item>拍照</item>
        <item>从手机相册选择</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">欢迎!</string>
    <string name="invalid_username">无效用户名</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">用户名</string>
    <string name="title_mute">静音</string>
    <string name="edit">编辑</string>
    <string name="subtitle_float_window">悬浮窗</string>
    <string name="subtitle_headset_support">耳机/蓝牙播放键起麦</string>
    <string name="action_sign_up">注册</string>
    <string name="title_warning">警告</string>
    <string name="desc_dissmiss_group">确定解散该频道吗?</string>
    <string name="title_confirm">确定</string>
    <string name="desc_quit_group">确定要退出该频道吗?</string>
    <string name="desc_no_channel">频道列表为空,请检查网络连接</string>
</resources>