<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#3333"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/buttonTakePhoto"
            android:text="@string/title_take_photo"
            android:paddingVertical="12dp"
            android:background="@drawable/bg_btn_plain"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
        <View
            android:background="#3333"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <Button
            android:id="@+id/buttonFromGallery"
            android:text="@string/title_from_gallery"
            android:layout_width="match_parent"
            android:paddingVertical="12dp"
            android:background="@drawable/bg_btn_plain"
            android:layout_height="55dp"/>
        <View
            android:background="#3333"
            android:layout_marginVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <Button
            android:id="@+id/buttonCancel"
            android:text="@string/cancel"
            android:paddingVertical="12dp"
            android:background="@drawable/bg_btn_plain"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>