<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout"/>
    <LinearLayout
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        tools:context=".view.main.SettingsFragment">
        <TextView
            android:text="@string/hint_user_info"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:background="#3333"
            android:layout_marginVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/subtitle_phone_number"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingVertical="6dp"
                    android:background="@null"
                    tools:text="@string/app_name" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewGroupIcon"
                android:layout_width="60dp"
                tools:src="@mipmap/ic_launcher"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <View
            android:background="#3333"
            android:layout_marginVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:text="@string/subtitle_call_number"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextCallNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingVertical="6dp"
            android:background="@null"
            tools:text="@string/app_name" />
        <View
            android:background="#3333"
            android:layout_marginVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:text="@string/subtitle_name"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingVertical="6dp"
            android:background="@null"
            tools:text="@string/app_name" />
        <View
            android:background="#3333"
            android:layout_marginVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:labelFor="@id/checkboxAutoPlay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/subtitle_autoplay"
                android:layout_height="wrap_content"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/checkboxAutoPlay"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:labelFor="@id/checkboxAutoPlay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/subtitle_float_window"
                android:layout_height="wrap_content"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/checkboxAlertWindow"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>