<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout"/>
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:gravity="center_horizontal"
            tools:context=".view.main.SettingsFragment">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/subtitle_group_name"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextGroupName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:paddingVertical="6dp"
                        android:background="@null"
                        tools:text="@string/app_name" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewGroupIcon"
                    android:layout_width="60dp"
                    tools:src="@mipmap/ic_launcher"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <View
                android:background="#3333"
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <LinearLayout
                android:id="@+id/layoutGroupUsersDetail"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewGroupName"
                    android:layout_weight="1"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:text="@string/title_group_members"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textViewGroupUserCount"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    tools:text="群成员60人"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:src="@mipmap/chevronright"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon_desc" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                android:id="@+id/recyclerViewGroupMembers"
                tools:itemCount="7"
                tools:listitem="@layout/group_user_layout"
                android:layout_width="match_parent"
                android:layout_height="240dp"/>
            <View
                android:background="#3333"
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="56dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:labelFor="@id/checkboxMuteGroupMessage"
                    android:layout_weight="1"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:text="@string/subtitle_mute_group"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkboxMuteGroupMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="#3333"
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="56dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:labelFor="@id/checkboxMuteUser"
                    android:layout_weight="1"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:text="@string/subtitle_pin_group"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkboxPinGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/buttonDismissGroup"
                android:layout_marginTop="24dp"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:background="@drawable/selector_btn_error"
                android:text="@string/title_dismiss_group"
                android:elevation="12dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <Button
                android:id="@+id/buttonQuitGroup"
                android:layout_marginTop="6dp"
                android:text="@string/title_leave_group"
                android:elevation="12dp"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:background="@drawable/selector_btn_error"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>