<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.user.UserInfoFragment">
    <include layout="@layout/toolbar_layout"/>
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/subtitle_user_call_number"
                    android:layout_marginEnd="12dp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextUserCallNumber"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingVertical="6dp"
                    android:background="@null"
                    tools:text="@string/app_name" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewUserAvatar"
                    android:layout_width="60dp"
                    tools:src="@mipmap/ic_launcher"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <View
                android:background="#3333"
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/subtitle_user_usage_freq"
                    android:layout_marginEnd="12dp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextUserFreq"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingVertical="6dp"
                    android:background="@null"
                    tools:text="@string/app_name" />
            </LinearLayout>
            <View
                android:background="#3333"
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/subtitle_phone_number"
                    android:layout_marginEnd="12dp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextUserMobile"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingVertical="6dp"
                    android:background="@null"
                    tools:text="@string/app_name" />
            </LinearLayout>
            <View
                android:background="#3333"
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="56dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:labelFor="@id/checkboxMuteUser"
                    android:layout_weight="1"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:text="@string/subtitle_mute_user"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkboxMuteUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>